<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.haneenalawneh.bakingapp.StepDetailsFragment">


        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:resize_mode="fill"

            />

        <TextView
            android:id="@+id/step_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="20dp"

            />

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="15dp" />

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/prev_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:onClick="moveToPrevious"
                android:text="Previous" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="100dp"
                android:onClick="moveToNext"
                android:text="Next" />
        </LinearLayout>

    </LinearLayout>


</ScrollView>